# TowerDefence

./: CMakeLists.txt  README.md
resources/maps/: level_00.txt  level_01.txt  level_02.txt
src/: main.cpp
src/components/: EnemySpawnManager.cpp  EnemySpawnManager.h  PhaseManager.cpp  PhaseManager.h  ProjectileSpawnManager.cpp  ProjectileSpawnManager.h  ResultsPanel.cpp  ResultsPanel.h  SettingsManager.cpp  SettingsManager.h  SoldierSpawnManager.cpp  SoldierSpawnManager.h  TextureRectManager.cpp  TextureRectManager.h  TileMap.cpp  TileMap.h  TowerAttributesManager.cpp  TowerAttributesManager.h  TrayOptionManager.cpp  TrayOptionManager.h  TrayUI.cpp  TrayUI.h  UIManager.cpp  UIManager.h  WaveGenerationManager.cpp  WaveGenerationManager.h  WaveManager.cpp  WaveManager.h
src/constants/: AudioId.h  Constants.cpp  Constants.h  Difficulty.h  Direction.h  EnemyType.h  EnvironmentType.h  GenerationPattern.h  IconType.h  Identifiers.h  PathType.h  PendingChange.h  Phase.h  ProjectileType.h  SoldierType.h  TextureId.h  TileId.h  TowerChange.h  TowerOption.h  TowerType.h
src/core/: AudioManager.cpp  AudioManager.h  GameData.cpp  GameData.h  HighScoreManager.cpp  HighScoreManager.h  State.h  StateManager.cpp  StateManager.h  TextureManager.cpp  TextureManager.h
src/data/: EnemyArchetype.h  EnemyStats.h  EnvironmentOption.h  GameOverStateConfig.h  HighScore.h  ProjectileData.h  SoldierSpawnData.h  SpawnGroup.h  SpawnInstruction.h  TowerAttributes.h  TowerSpot.h  TrayOption.h  TypeWeight.h  UIOption.h  Wave.h
src/entities/: ArcherTower.cpp  ArcherTower.h  ArrowProjectile.cpp  ArrowProjectile.h  Enemy.cpp  Enemy.h  MageTower.cpp  MageTower.h  MagicProjectile.cpp  MagicProjectile.h  MeleeTower.cpp  MeleeTower.h  Projectile.cpp  Projectile.h  RangedTower.cpp  RangedTower.h  Soldier.cpp  Soldier.h  Tower.cpp  Tower.h
src/states/: GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  SettingsState.cpp  SettingsState.h
src/ui/: Button.cpp  Button.h
src/utils/: CollisionUtils.cpp  CollisionUtils.h  DataUtils.cpp  DataUtils.h  GameUtils.cpp  GameUtils.h  HashUtilities.h  InputUtils.cpp  InputUtils.h  OrderingUtilities.h  PathingTypes.h
